# api-ms-win-core-synch-Win7

./: CMakeLists.txt  README  README.md  api-ms-win-core-synch-l1-2-0.c  dxgi.c
